cluster/apps/platform/librespeed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  namespace: librespeed
  labels:
    app.kubernetes.io/name: librespeed
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: librespeed
